# helios

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Doxyfile  NOTES.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml  codeql-analysis.yml  docs.yml  doxygen.yml
assets/scripts/: init.lua  test.lua  test_1.lua  test_2.lua
assets/shaders/: background.frag.spv  background.vert.spv  blit.frag.spv  blit.vert.spv  tilemap.frag.spv  tilemap.vert.spv
demo/: CMakeLists.txt  demo.cc
doc/: Doxyfile  code_style.md  code_style.rst  conf.py  doxygenlayout.xml  getting_started.md  index.md  index.rst  requirements.txt  shader_guide.md
doc/getting_started/: 00_requirements.md  01_cloning.md  02_building.md  03_blue_window.md
doc/shader_guide/: 00_requirements.md  01_thorns_hlsl.md  02_build_script.md  03_shader_example.md
docs/: building.md
examples/: CMakeLists.txt  ex_blue_window.cc  ex_demo.cc
game/: CMakeLists.txt  game.cc
include/: CMakeLists.txt  common.hh  config.hh.in
include/api/: api.hh  context.hh  core.hh  event.hh  function.hh  module.hh
include/data/: image.hh  transform.hh  vertex.hh  vidmode.hh  view.hh
include/gfx/: buffer.hh  framebuffer.hh  pipeline.hh  shader.hh  texture.hh  vertex_array.hh
include/glxx/: buffer.hh  framebuffer.hh  pipeline.hh  shader.hh  texture.hh  vertex_array.hh
include/helios/: config.hh  config.hh.in  fs.hh  image.hh  logger.hh  macros.hh  types.hh
include/helios/gl/: buffer.hh  framebuffer.hh  loader.hh  pipeline.hh  shader.hh  texture.hh  vertex_array.hh
include/helios/glfw/: clock.hh  context.hh  window.hh
include/helios/math/: transform.hh  view.hh
include/helios/plat/: clock.hh  context.hh  fs.hh  window.hh
include/helios/render/: background_renderer.hh  blit_renderer.hh  sprite_renderer.hh  tilemap_renderer.hh
include/helios/sound/: buffer.hh  buffer_flac.hh  buffer_wav.hh  context.hh  out_stream.hh
include/helios/util/: args.hh  format.hh
include/input/: keyboard.hh
include/render/: common.hh  screenshots.hh  sprite_renderer.hh
include/thorn/: config.hh  config.hh.in  context.hh  fs.hh  glad.hh  image.hh  macros.hh  types.hh
include/thorn/gl/: buffer.hh  framebuffer.hh  pipeline.hh  shader.hh  texture.hh  vertex_array.hh
include/thorn/glfw/: clock.hh  window.hh
include/thorn/math/: transform.hh  view.hh
include/thorn/render/: background_renderer.hh  blit_renderer.hh  sprite_renderer.hh  tilemap_renderer.hh
include/thorn/util/: file_io.hh
include/ui/: file_browser.hh  logger_out.hh  menu_bar.hh  ui.hh
include/util/: clock.hh  command_line.hh  format.hh  fs.hh  imgui.hh  json.hh  logger.hh  lua.hh
shaders/: 00_shaders.txt  background.frag.hlsl  background.vert.hlsl  blit.frag.hlsl  blit.vert.hlsl  sprite.frag.hlsl  sprite.vert.hlsl  tilemap.frag.hlsl  tilemap.vert.hlsl
src/: CMakeLists.txt  context.cc  image.cc  logger.cc  main.cc
src/api/: CMakeLists.txt  api.cc  context.cc  core.cc  event.cc  function.cc  module.cc
src/data/: CMakeLists.txt  vidmode.cc
src/glfw/: CMakeLists.txt  context.cc  window.cc
src/input/: CMakeLists.txt  keyboard.cc
src/plat/: context.cc
src/render/: CMakeLists.txt  background_renderer.cc  blit_renderer.cc  screenshots.cc  sprite_renderer.cc  tilemap_renderer.cc
src/sound/: CMakeLists.txt  out_stream.cc
src/ui/: CMakeLists.txt  file_browser.cc  logger_out.cc  menu_bar.cc  ui.cc
src/util/: CMakeLists.txt  args.cc  clock.cc  command_line.cc  fs.cc  logger.cc  lua.cc
tools/: buildshaders.sh  progressbar.sh
